--- a/warehouse/src/main/resources/application.properties
+++ b/warehouse/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=sprio
 
 spring.jpa.hibernate.ddl-auto=validate
+
+management.security.enabled=false
