Fixed tests. Added grafana.

--- a/warehouse/src/main/resources/application.properties
+++ b/warehouse/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.hibernate.ddl-auto=validate
 management.security.enabled=false
 
 info.myInfo=ABC
+
+graphite.enabled=true
+graphite.host=localhost
+graphite.port=2003
