--- a/store/src/main/resources/bootstrap.yml
+++ b/store/src/main/resources/bootstrap.yml
@@ -5,4 +5,7 @@ spring:
     config:
       uri: http://localhost:9000
       fail-fast: true
-      
+
+warehouse:
+  ribbon:
+    PoolMaxThreads: 5
