--- a/warehouse/pom.xml
+++ b/warehouse/pom.xml
@@ -22,7 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<spring-cloud.version>Dalston.SR5</spring-cloud.version>
+		<spring-cloud.version>Edgware.SR1</spring-cloud.version>
 		<spock.version>1.1-groovy-2.4</spock.version>
 	</properties>
 
