--- a/store/src/main/resources/bootstrap.yml
+++ b/store/src/main/resources/bootstrap.yml
@@ -1,9 +1,9 @@
 spring:
   application:
-    name: store
+    name: "store"
   cloud:
     config:
-      uri: http://localhost:9000
+      uri: "http://localhost:9000"
       fail-fast: true
 
 warehouse:
