--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -42,6 +42,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zuul</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>4.11</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
