--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_PASSWORD: "sprio"
       POSTGRES_DB: "keycloak"
   keycloak-service:
-    image: "jboss/keycloak:3.4.3.Final"
+    image: "jboss/keycloak"
     ports:
       - "8080:8080"
     environment:
